# YouTube-Controller

./: .gitattributes  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: test.yml  tests.yml
driver/adblock/4.46.2_0/: manifest.json
network/: client.py  server.py
network/backup/: client.py
src/: __init__.py  keys.py  main.py  remote.py  utils.py  x.py  youtubecontroller.py
src/YouTubeController/: __init__.py  keys.py  main.py  operator.py  remote.py  status.py  utils.py  youtubecontroller.py
src/YouTubeController/driver/adblock/4.46.2_0/: abp-background.js  manifest.fingerprint
src/network/: client.py  server.py
src/network/backup/: client.py  server.py
tests/: __init__.py  test_driver.py  test_remote.py
