[metadata]
name = YouTubeController
description = lol
author = Kassab
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =

    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    YouTubeController
install_requires =
    selenium==4.1.2
    webdriver-manager==3.5.3
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    

[options.package_data]
YouTubeController = py.typed

